Añadidos géneros en Songs(One to Many) y Bands(Many to Many)
This closes #13, closes #14

--- a/src/main/webapp/i18n/ca/genre.json
+++ b/src/main/webapp/i18n/ca/genre.json
@@ -16,6 +16,7 @@
                 "title": "Genre"
             },
             "name": "Name",
+            "song": "Song",
             "band": "Band"
         }
     }
