--- a/src/main/webapp/i18n/ca/valoracionBand.json
+++ b/src/main/webapp/i18n/ca/valoracionBand.json
@@ -18,8 +18,7 @@
             "puntuacion": "Puntuacion",
             "like": "Like",
             "timestamp": "Timestamp",
-            "band": "Band",
-            "user": "User"
+            "band": "Band"
         }
     }
 }
