--- a/src/main/webapp/i18n/en/song.json
+++ b/src/main/webapp/i18n/en/song.json
@@ -17,6 +17,7 @@
             },
             "name": "Name",
             "description": "Description",
+            "genre": "Genre",
             "album": "Album",
             "valoracion": "Valoracion"
         }
