--- a/src/main/webapp/i18n/es/genre.json
+++ b/src/main/webapp/i18n/es/genre.json
@@ -16,6 +16,7 @@
                 "title": "Genre"
             },
             "name": "Name",
+            "song": "Song",
             "band": "Band"
         }
     }
