Las fechas se añaden automáticamente en las votaciones.
This closes #19

--- a/src/main/webapp/i18n/en/valoracionAlbum.json
+++ b/src/main/webapp/i18n/en/valoracionAlbum.json
@@ -17,7 +17,7 @@
             },
             "puntuacion": "Puntuacion",
             "like": "Like",
-            "timestamp": "Timestamp",
+            "timestamp": "TimeStamp",
             "album": "Album",
             "user": "User"
         }
