--- a/src/main/webapp/i18n/en/valoracionBand.json
+++ b/src/main/webapp/i18n/en/valoracionBand.json
@@ -18,7 +18,8 @@
             "puntuacion": "Puntuacion",
             "like": "Like",
             "timestamp": "Timestamp",
-            "band": "Band"
+            "band": "Band",
+            "user": "User"
         }
     }
 }
