--- a/src/main/webapp/i18n/ca/global.json
+++ b/src/main/webapp/i18n/ca/global.json
@@ -5,6 +5,7 @@
         "menu": {
             "home": "Inici",
             "prueba-fromulario": "Fromulario",
+            "pagehome-phome": "Phome",
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
             "entities": {
                 "main": "Entitats",
