--- a/src/main/webapp/i18n/es/global.json
+++ b/src/main/webapp/i18n/es/global.json
@@ -5,6 +5,7 @@
         "menu": {
             "home": "Inicio",
             "prueba-fromulario": "Fromulario",
+            "pagehome-phome": "Phome",
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
             "entities": {
                 "main": "Entidades",
@@ -144,5 +145,5 @@
         "emailexists": "Email is already in use!",
         "idexists": "A new {{entityName}} cannot already have an ID"
     },
-    "footer": "pie de página"
+    "footer": "Building by:"
 }
