Añadido pagina tendencias para seleccionar top 10 (by Julio & Llauna)

--- a/src/main/webapp/i18n/es/pagesong.json
+++ b/src/main/webapp/i18n/es/pagesong.json
@@ -2,7 +2,7 @@
     "rockbible3App": {
         "pagesong": {
             "pages": {
-                "title": "pages"            }
+                "title": "Mis Artistas"            }
         }
     }
 }
